@@ -2,6 +2,7 @@
   - (zathor) [OneClick] some dga demuxed audio files were not deleted during cleanup
   - (zathor) [MKV Muxer] changed default track flag of subtitles to no. Feature request #3086194
   - (zathor) [MKV Muxer] added option to set the default subtitle track
+  - (zathor) [MKV Muxer] added option to set a subtitle delay. Feature request #3088742
 
 0.3.5.16
   - (kurtnoise) add FLAC files support in the Matroska Muxer
